--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <html>
 	<head>
-		<title>Google</title>
+		<title>Rahul Sangwan</title>
+		<link rel="stylesheet" type="text/css" href="./milligram.css" />
 	</head>
 	<body>
-		i am here
+		<h1>Hi I'm <b>Rahul Sangwan</b></h1>
 	</body>
 </html>
