--- a/index.html
+++ b/index.html
@@ -2,8 +2,33 @@
 	<head>
 		<title>Rahul Sangwan</title>
 		<link rel="stylesheet" type="text/css" href="./milligram.css" />
+		<link rel="stylesheet" type="text/css" href="./styles/nav.css" />
 	</head>
 	<body>
-		<h1>Hi I'm <b>Rahul Sangwan</b></h1>
+		<div class="container">
+			<nav class="topnav">
+				<a href="#publication">publication</a>
+				<a href="#work">work</a>
+				<a href="#blog">blog</a>
+				<a href="#projects">projects</a>
+				<a class="active" href="#about">about</a>
+			</nav>
+		</div>
+		
+		<hr>
+
+		<div class="container">
+			<div class="row" style="margin-top: 80px;">
+				<div class="column column-75">
+					<h1>Hi I'm <b>Rahul Sangwan</b></h1>
+				</div>
+				<div class="column column-25">
+					<img
+						src="./svgs/profile.svg"
+						alt="Rahul Sangwan"
+						height="300" />
+				</div>
+			</div>
+		</div>
 	</body>
 </html>
