after education section

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 		<title>Rahul Sangwan</title>
 		<link rel="stylesheet" type="text/css" href="./milligram.css" />
 		<link rel="stylesheet" type="text/css" href="./styles/nav.css" />
+		<link rel="stylesheet" type="text/css" href="./styles/main.css" />
 	</head>
 	<body>
 		<div class="container">
@@ -19,15 +20,118 @@
 
 		<div class="container">
 			<div class="row" style="margin-top: 80px;">
-				<div class="column column-75">
+				<div class="column column-67">
 					<h1>Hi I'm <b>Rahul Sangwan</b></h1>
+					<div>
+						Linux was originally developed for personal computers 
+						based on the Intel x86 architecture, but has since been ported 
+						to more platforms than any other operating system.
+						<p>Because of the dominance of the Linux-based Android on smartphones, 
+							Linux also has the largest installed base of all general-purpose operating systems.</p>
+							<p>Although it is used by only around 2.3 percent of desktop computers,[25][26] the 
+								Chromebook, which runs the Linux kernel-based Chrome OS, dominates the US K–12 
+								education market and represents nearly 20 percent of sub-$300 notebook sales in the US.
+								[27] Linux is the leading operating system on servers (over 96.4% of the top 1 million web 
+								servers' operating systems are Linux),[28] leads other big iron systems such as mainframe 
+								computers, and is the only OS used on TOP500 supercomputers (since November 2017, having gradually eliminated all competitors)</p>
+					</div>
 				</div>
+				<div class="column"></div>
 				<div class="column column-25">
 					<img
 						src="./svgs/profile.svg"
 						alt="Rahul Sangwan"
 						height="300" />
 				</div>
+			</div>
+
+			<br>
+			<br>
+			<div class="row">
+				<div class="column column-20">
+					<h2>skills</h2>
+				</div>
+				
+				<div class="column column-20">
+					<h4 class="row types">languages</h3>
+					<div class="row">C/C++</div>
+					<div class="row">Python</div>
+					<div class="row">Java</div>
+					<div class="row">C#</div>
+					<div class="row">SQL</div>
+				</div>
+
+				<div class="column column-20">
+					<h4 class=" row types">tools</h3>
+					<div class="row">Git</div>
+					<div class="row">GDB</div>
+					<div class="row">Vim</div>
+					<div class="row">Docker</div>
+					<div class="row">Yocto</div>
+				</div>
+
+				<div class="column column-20">
+					<h4 class="row types">frameworks</h3>
+					<div class="row">Radare2</div>
+					<div class="row">Angular 2+</div>
+					<div class="row">.NET</div>
+					<div class="row">OpenVAS</div>
+					<div class="row"></div>
+				</div>
+
+				<div class="column column-20">
+					<h4 class="row types">libraries</h3>
+					<div class="row">Tkinter</div>
+					<div class="row">Numpy</div>
+					<div class="row">Matplotlib</div>
+					<div class="row">Open62541</div>
+					<div class="row">OpenCV</div>
+				</div>
+			</div>
+
+			<br>
+			<br>
+			<div>
+				<div class="row">
+					<h2>education</h2>
+				</div>
+
+				<div class="row">
+					<div class="column column-80 color">
+						M. Tech, Computer Science and Engineering
+					</div>
+					<div class="column column-20">2018 - 2020</div>
+				</div>
+				<div class="">
+					<a href="#thn">Deenbandhu Chhotu Ram University of Science & Technology, Haryana</a>
+				</div>
+
+				<br>
+
+				<div class="row">
+					<div class="column column-80 color">
+						B. Tech, Computer Science and Engineering
+					</div>
+					<div class="column column-20">2013 - 2017</div>
+				</div>
+				<div class="">
+					<a href="#thn">Guru Jambheshwar University of Science & Technology, Haryana</a>
+				</div>
+
+				<br>
+
+				<div class="row">
+					<div class="column column-80">
+						<span class="color">High School</span> <a href="#">- University Campus School MDU, Rohtak</a>
+					</div>
+					<div class="column column-20">2012 - 2013</div>
+				</div>
+			</div>
+
+			<br>
+			<br>
+			<div>
+				<h2>projects</h2>
 			</div>
 		</div>
 	</body>
