online profiles link

--- a/index.html
+++ b/index.html
@@ -23,17 +23,41 @@
 				<div class="column column-67">
 					<h1>Hi I'm <b>Rahul Sangwan</b></h1>
 					<div>
-						Linux was originally developed for personal computers 
-						based on the Intel x86 architecture, but has since been ported 
-						to more platforms than any other operating system.
-						<p>Because of the dominance of the Linux-based Android on smartphones, 
-							Linux also has the largest installed base of all general-purpose operating systems.</p>
-							<p>Although it is used by only around 2.3 percent of desktop computers,[25][26] the 
-								Chromebook, which runs the Linux kernel-based Chrome OS, dominates the US K–12 
-								education market and represents nearly 20 percent of sub-$300 notebook sales in the US.
-								[27] Linux is the leading operating system on servers (over 96.4% of the top 1 million web 
-								servers' operating systems are Linux),[28] leads other big iron systems such as mainframe 
-								computers, and is the only OS used on TOP500 supercomputers (since November 2017, having gradually eliminated all competitors)</p>
+						<p>
+							I am a Associate Software Engineer at Nagarro SE, where I work on building
+							IoT applications.
+						</p>
+						
+						<p>
+							Before working at Nagarro, I completed my Masters from DCRUST, Haryana, 
+							where I got the oppurinity to explore my academic interests in Malware 
+							Analysis and Reverse Engineering.
+						</p>
+					</div>
+
+					<br>
+					<div style="text-align: center;">
+						<a href="mailto:rs@rsdir.com" class="profiles">
+							<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" focusable="false" width="2em" height="2.4em" style="-ms-transform: rotate(360deg); -webkit-transform: rotate(360deg); transform: rotate(360deg);" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24"><path d="M19 4H5a3 3 0 0 0-3 3v10a3 3 0 0 0 3 3h14a3 3 0 0 0 3-3V7a3 3 0 0 0-3-3zm-.67 2L12 10.75L5.67 6zM19 18H5a1 1 0 0 1-1-1V7.25l7.4 5.55a1 1 0 0 0 .6.2a1 1 0 0 0 .6-.2L20 7.25V17a1 1 0 0 1-1 1z"/></svg>
+						</a>
+						<a href="https://www.linkedin.com/in/rahulsangwn/" class="profiles">
+							<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" focusable="false" width="2em" height="2.4em" style="-ms-transform: rotate(360deg); -webkit-transform: rotate(360deg); transform: rotate(360deg);" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24"><circle cx="4.983" cy="5.009" r="2.188"/><path d="M9.237 8.855v12.139h3.769v-6.003c0-1.584.298-3.118 2.262-3.118c1.937 0 1.961 1.811 1.961 3.218v5.904H21v-6.657c0-3.27-.704-5.783-4.526-5.783c-1.835 0-3.065 1.007-3.568 1.96h-.051v-1.66H9.237zm-6.142 0H6.87v12.139H3.095z"/></svg>
+						</a>
+						<a href="https://github.com/rahulsangwn" class="profiles">
+							<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" focusable="false" width="2em" height="2.4em" style="-ms-transform: rotate(360deg); -webkit-transform: rotate(360deg); transform: rotate(360deg);" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24"><g><path fill-rule="evenodd" clip-rule="evenodd" d="M12 0C5.37 0 0 5.37 0 12c0 5.31 3.435 9.795 8.205 11.385c.6.105.825-.255.825-.57c0-.285-.015-1.23-.015-2.235c-3.015.555-3.795-.735-4.035-1.41c-.135-.345-.72-1.41-1.23-1.695c-.42-.225-1.02-.78-.015-.795c.945-.015 1.62.87 1.845 1.23c1.08 1.815 2.805 1.305 3.495.99c.105-.78.42-1.305.765-1.605c-2.67-.3-5.46-1.335-5.46-5.925c0-1.305.465-2.385 1.23-3.225c-.12-.3-.54-1.53.12-3.18c0 0 1.005-.315 3.3 1.23c.96-.27 1.98-.405 3-.405s2.04.135 3 .405c2.295-1.56 3.3-1.23 3.3-1.23c.66 1.65.24 2.88.12 3.18c.765.84 1.23 1.905 1.23 3.225c0 4.605-2.805 5.625-5.475 5.925c.435.375.81 1.095.81 2.22c0 1.605-.015 2.895-.015 3.3c0 .315.225.69.825.57A12.02 12.02 0 0 0 24 12c0-6.63-5.37-12-12-12z"/></g></svg>
+						</a>
+						<a href="https://leetcode.com/rahulsangwn/" class="profiles">
+							<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" focusable="false" width="2em" height="2.4em" style="-ms-transform: rotate(360deg); -webkit-transform: rotate(360deg); transform: rotate(360deg);" preserveAspectRatio="xMidYMid meet" viewBox="0 0 32 32"><path d="M21.469 23.907l-3.595 3.473c-.624.625-1.484.885-2.432.885s-1.807-.26-2.432-.885l-5.776-5.812c-.62-.625-.937-1.537-.937-2.485c0-.952.317-1.812.937-2.432l5.76-5.844c.62-.619 1.5-.859 2.448-.859s1.808.26 2.432.885l3.595 3.473c.687.688 1.823.663 2.536-.052c.708-.713.735-1.848.047-2.536l-3.473-3.511a6.793 6.793 0 0 0-3.261-1.787l3.287-3.333c.688-.687.667-1.823-.047-2.536s-1.849-.735-2.536-.052L4.553 13.968c-1.307 1.312-1.989 3.113-1.989 5.113c0 1.996.683 3.86 1.989 5.168l5.797 5.812c1.307 1.307 3.115 1.937 5.115 1.937c1.995 0 3.801-.683 5.109-1.989l3.479-3.521c.688-.683.661-1.817-.052-2.531s-1.849-.74-2.531-.052zm6.28-6.558H14.218c-.932 0-1.692.801-1.692 1.791c0 .991.76 1.797 1.692 1.797h13.531c.933 0 1.693-.807 1.693-1.797c0-.989-.76-1.791-1.693-1.791z"/></svg>
+						</a>
+						<a href="https://www.quora.com/profile/Rahul-Sangwan-6" class="profiles">
+							<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" focusable="false" width="2em" height="2.4em" style="-ms-transform: rotate(360deg); -webkit-transform: rotate(360deg); transform: rotate(360deg);" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24"><path d="M12.555 17.025c-.624-1.227-1.354-2.465-2.781-2.465c-.271 0-.546.046-.795.157l-.484-.967c.59-.509 1.544-.911 2.77-.911c1.908 0 2.889.922 3.667 2.094c.459-1.001.678-2.354.678-4.03c0-4.188-1.308-6.336-4.366-6.336c-3.014 0-4.318 2.148-4.318 6.336c0 4.164 1.305 6.291 4.318 6.291c.478 0 .913-.051 1.311-.169zm.747 1.461a7.977 7.977 0 0 1-2.059.274c-4.014 0-7.941-3.202-7.941-7.858C3.303 6.203 7.229 3 11.243 3c4.081 0 7.972 3.179 7.972 7.903c0 2.628-1.226 4.763-3.007 6.143c.572.861 1.157 1.436 1.988 1.436c.899 0 1.261-.687 1.328-1.236h1.167c.07.73-.301 3.754-3.574 3.754c-1.989 0-3.035-1.146-3.822-2.496l.007-.018z"/></svg>
+						</a>
+						<a href="https://codeforces.com/profile/rahulsangwn" class="profiles">
+							<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" focusable="false" width="2em" height="2.4em" style="-ms-transform: rotate(360deg); -webkit-transform: rotate(360deg); transform: rotate(360deg);" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24"><path d="M4.5 7.5A1.5 1.5 0 0 1 6 9v10.5A1.5 1.5 0 0 1 4.5 21h-3C.673 21 0 20.328 0 19.5V9c0-.828.673-1.5 1.5-1.5h3zm9-4.5A1.5 1.5 0 0 1 15 4.5v15a1.5 1.5 0 0 1-1.5 1.5h-3c-.827 0-1.5-.672-1.5-1.5v-15c0-.828.673-1.5 1.5-1.5h3zm9 7.5A1.5 1.5 0 0 1 24 12v7.5a1.5 1.5 0 0 1-1.5 1.5h-3a1.5 1.5 0 0 1-1.5-1.5V12a1.5 1.5 0 0 1 1.5-1.5h3z"/></svg>
+						</a>
+						<a href="https://www.hackerrank.com/rahul_sangwan3" class="profiles">
+							<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" focusable="false" width="2em" height="2.4em" style="-ms-transform: rotate(360deg); -webkit-transform: rotate(360deg); transform: rotate(360deg);" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24"><path d="M12 0c1.285 0 9.75 4.886 10.392 6c.645 1.115.645 10.885 0 12S13.287 24 12 24s-9.75-4.885-10.395-6c-.641-1.115-.641-10.885 0-12C2.25 4.886 10.715 0 12 0zm2.295 6.799a.259.259 0 0 0-.258.258v3.875H9.963V6.908h.701a.255.255 0 0 0 .254-.258a.257.257 0 0 0-.123-.221L9.223 4.92a.303.303 0 0 0-.226-.109a.265.265 0 0 0-.207.107L7.11 6.43a.257.257 0 0 0-.12.218c0 .143.113.258.255.258h.704l.008 10.035c0 .145.111.258.254.258h1.492a.258.258 0 0 0 .259-.256v-4.004h4.073v4.152h-.699a.26.26 0 0 0-.137.477l1.579 1.51a.301.301 0 0 0 .225.109a.264.264 0 0 0 .208-.109l1.679-1.51a.258.258 0 0 0-.135-.477h-.704l-.007-10.034a.257.257 0 0 0-.255-.26h-1.494v.002z"/></svg>
+						</a>
 					</div>
 				</div>
 				<div class="column"></div>
@@ -167,6 +191,7 @@
 					</div>
 
 					<br>
+					<br>
 
 					<div>
 						<div class="row">
@@ -195,6 +220,7 @@
 						</div>
 					</div>
 
+					<br>
 					<br>
 
 					<div>
