after auto update

--- a/index.html
+++ b/index.html
@@ -122,8 +122,8 @@
 			<div class="column column-20">
 				<h4 class="row types">languages</h3>
 					<div class="row">C/C++</div>
+					<!-- <div class="row">C++</div> -->
 					<div class="row">Python</div>
-					<div class="row">Java</div>
 					<div class="row">C#</div>
 					<div class="row">SQL</div>
 			</div>
@@ -140,9 +140,9 @@
 			<div class="column column-20">
 				<h4 class="row types">frameworks</h3>
 					<div class="row">Radare2</div>
-					<div class="row">Angular 2+</div>
+					<!-- <div class="row">Angular 2+</div> -->
 					<div class="row">.NET</div>
-					<div class="row">OpenVAS</div>
+					<div class="row">Boost</div>
 					<div class="row"></div>
 			</div>
 
@@ -212,26 +212,27 @@
 							Gurgoan, India</a>
 						<blockquote>
 							<p>
-								Developed a contactless entry management system to enable employee QR code scan, mask
-								detection and fever detection (using thermal camera) for COVID-19 pandemic.
-								It is integrated with AWS and implemented on NVIDIA Jetson Nano.
+								Currently, Developing a solution to enable the wireless communication between the car head
+								unit (Android Automotive OS) and the mobile device, instead of using USB. Using the C++
+								and Boost Library.
 							</p>
 
 							<p>
-								Developed network sockets on Linux and FreeRTOS for TI safety MCU.
+								Developed a contact-less entry management system to enable employee QR code scan, mask
+								detection and fever detection (using thermal camera) for COVID-19 pandemic. Worked on
+								Python, tkinter, tensorflow, OpenCV, matplotlib, numpy, and AWS.
 							</p>
 
 						</blockquote>
 						<div style="margin-left: 3rem; margin-top: -1rem;">
 							<span class="button-sm">C</span>
-							<span class="button-sm">Python</span>
-							<span class="button-sm">AWS</span>
+							<span class="button-sm">C++</span>
 							<span class="button-sm">OpenCV</span>
 							<span class="button-sm">Tkinter</span>
-							<span class="button-sm">RTOS</span>
+							<span class="button-sm">AWS</span>
 							<span class="button-sm">Linux</span>
-							<span class="button-sm">Socket Programming</span>
-							<span class="button-sm">Functional Safety</span>
+							<span class="button-sm">Boost</span>
+							<span class="button-sm">Python</span>
 						</div>
 					</div>
 					<div class="column column-20">Sep 2020 - Present</div>
@@ -279,9 +280,7 @@
 							Delhi, India</a>
 						<blockquote>
 							<p>
-								Worked on Coursehero and Chegg projects as subject matter expert in the areas of object
-								oriented programming, network security, Assembly language.
-								Coursehero and Chegg are US based online learning Platform.
+								Worked as subject matter expert of C Language, Operating Systems, Computer Networks and Information Security.
 							</p>
 
 						</blockquote>
