--- a/index.html
+++ b/index.html
@@ -285,9 +285,9 @@
 
 						</blockquote>
 						<div style="margin-left: 3rem; margin-top: -1rem;">
-							<span class="button-sm">Networking</span>
-							<span class="button-sm">Object Oriented Programming</span>
-							<span class="button-sm">C++</span>
+							<span class="button-sm">Computer Networks</span>
+							<span class="button-sm">Operating Systems</span>
+							<span class="button-sm">C</span>
 						</div>
 					</div>
 					<div class="column column-20">Aug 2018 - Oct 2018</div>
