--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 			<a href="#skills">skills</a>
 			<a href="#education">education</a>
 			<a class="active" href="#about">about</a>
+			<a href="https://rsdir.com">blog</a>
 		</nav>
 	</div>
 
@@ -28,7 +29,7 @@
 				<div>
 					<p>
 						I am an Associate Software Engineer at Nagarro SE, where I work on building
-						IoT applications.
+						Embedded applications.
 					</p>
 
 					<p>
@@ -107,7 +108,8 @@
 			</div>
 			<div class="column"></div>
 			<div class="column column-25">
-				<img src="./svgs/profile.svg" alt="Rahul Sangwan" height="300" />
+				<img src="./svgs/rahul.jpg" style="margin-top: 40px;" alt="Rahul Sangwan" height="180" />
+				<div style=""># Gurugram, Haryana, India</div> 
 			</div>
 		</div>
 
@@ -119,40 +121,55 @@
 				<h2>skills</h2>
 			</div>
 
-			<div class="column column-20">
+			<div class="column column-15">
 				<h4 class="row types">languages</h3>
-					<div class="row">C/C++</div>
-					<!-- <div class="row">C++</div> -->
+					<div class="row">C Langauge</div>
+					<div class="row">Modern C++</div>
 					<div class="row">Python</div>
 					<div class="row">C#</div>
 					<div class="row">SQL</div>
+					<div class="row">x86 Assembly</div>
 			</div>
 
 			<div class="column column-20">
-				<h4 class=" row types">tools</h3>
-					<div class="row">Git</div>
-					<div class="row">GDB</div>
-					<div class="row">Vim</div>
-					<div class="row">Docker</div>
-					<div class="row">Yocto</div>
+				<h4 class="row types">platforms/devices</h3>
+					<div class="row">FreeRTOS</div>
+					<div class="row">Linux</div>
+					<div class="row">Android Automotive OS</div>
+					<div class="row">NVIDIA Jetson</div>
+					<div class="row">TI TMS570</div>
+					<div class="row">Raspberry Pi 4</div>
+					<div class="row">STM32F407</div>
 			</div>
 
-			<div class="column column-20">
+			<div class="column column-15">
+				<h4 class="row types">libraries</h3>
+					<div class="row">Libusb</div>
+					<div class="row">Open62541</div>
+					<div class="row">Tkinter</div>
+					<div class="row">Matplotlib</div>
+					<div class="row">Libmodbus</div>
+			</div>
+
+			
+
+			<div class="column column-15">
 				<h4 class="row types">frameworks</h3>
 					<div class="row">Radare2</div>
 					<!-- <div class="row">Angular 2+</div> -->
 					<div class="row">.NET</div>
 					<div class="row">Boost</div>
-					<div class="row"></div>
+					<div class="row">OpenVAS</div>
 			</div>
 
-			<div class="column column-20">
-				<h4 class="row types">libraries</h3>
-					<div class="row">Tkinter</div>
-					<div class="row">Numpy</div>
-					<div class="row">Matplotlib</div>
-					<div class="row">Open62541</div>
-					<div class="row">OpenCV</div>
+			<div class="column column-15">
+				<h4 class=" row types">tools</h3>
+					<div class="row">Git</div>
+					<div class="row">GDB</div>
+					<div class="row">CMake</div>
+					<div class="row">Make</div>
+					<div class="row">Yocto</div>
+					<div class="row">PlantUML</div>
 			</div>
 		</div>
 
@@ -212,26 +229,24 @@
 							Gurgoan, India</a>
 						<blockquote>
 							<p>
-								Currently, Developing a solution to enable the wireless communication between the car head
-								unit (Android Automotive OS) and the mobile device, instead of using USB. Using the C++
-								and Boost Library.
+								Developed a solution to enable wireless communication between car head unit 
+								(Android Automotive OS) and mobile phone (Android OS), using C++ and Boost Asio.
 							</p>
 
 							<p>
-								Developed a contact-less entry management system to enable employee QR code scan, mask
-								detection and fever detection (using thermal camera) for COVID-19 pandemic. Worked on
-								Python, tkinter, tensorflow, OpenCV, matplotlib, numpy, and AWS.
+								Developed a contact-less entry management system to enable employee QR code scan, 
+								mask detection and fever detection (using thermal camera) for COVID-19 pandemic. 
 							</p>
 
 						</blockquote>
 						<div style="margin-left: 3rem; margin-top: -1rem;">
-							<span class="button-sm">C</span>
+							<!-- <span class="button-sm">C</span> -->
 							<span class="button-sm">C++</span>
-							<span class="button-sm">OpenCV</span>
+							<!-- <span class="button-sm">OpenCV</span> -->
 							<span class="button-sm">Tkinter</span>
 							<span class="button-sm">AWS</span>
-							<span class="button-sm">Linux</span>
-							<span class="button-sm">Boost</span>
+							<span class="button-sm">Android Auto OS</span>
+							<span class="button-sm">Boost ASIO</span>
 							<span class="button-sm">Python</span>
 						</div>
 					</div>
@@ -254,14 +269,16 @@
 							</p>
 
 							<p>
-								Worked on creation and portation of custom Linux distributions for ARM based SoCs.
+								Developed network sockets and protocol for communication between Linux (Raspberry Pi) and 
+								FreeRTOS (TI Hercules TMS570 Micro-controller).
 							</p>
 
 						</blockquote>
 						<div style="margin-left: 3rem; margin-top: -1rem;">
 							<span class="button-sm">C</span>
-							<span class="button-sm">Yocto</span>
-							<span class="button-sm">Linux Internals</span>
+							<span class="button-sm">FreeRTOS</span>
+							<span class="button-sm">Linux</span>
+							<span class="button-sm">Socket Programming</span>
 							<span class="button-sm">OPC UA</span>
 							<span class="button-sm">Modbus</span>
 						</div>
@@ -280,7 +297,7 @@
 							Delhi, India</a>
 						<blockquote>
 							<p>
-								Worked as subject matter expert of C Language, Operating Systems, Computer Networks and Information Security.
+								Worked as subject matter expert of C Language, Operating Systems, and Computer Networks. 
 							</p>
 
 						</blockquote>
