--- a/index.html
+++ b/index.html
@@ -230,12 +230,17 @@
 						<blockquote>
 							<p>
 								Developed a solution to enable wireless communication between car head unit 
-								(Android Automotive OS) and mobile phone (Android OS), using C++ and Boost Asio.
+								(Android Automotive OS) and mobile phone (Android OS), using Raspberry Pi Zero W.
 							</p>
 
 							<p>
-								Developed a contact-less entry management system to enable employee QR code scan, 
-								mask detection and fever detection (using thermal camera) for COVID-19 pandemic. 
+								Coordinated with AI team to develop a contact-less entry management system for COVID19. 
+								It enables employee QR code scan, mask detection and fever detection, using IMX219 
+								camera, MLX90640 thermal camera and NVIDIA Jetson Nano. 
+							</p>
+							<p>
+								Helped a team in porting connected vehicle edge components onto Renesas R-Car ECU
+								chipset.
 							</p>
 
 						</blockquote>
@@ -243,7 +248,7 @@
 							<!-- <span class="button-sm">C</span> -->
 							<span class="button-sm">C++</span>
 							<!-- <span class="button-sm">OpenCV</span> -->
-							<span class="button-sm">Tkinter</span>
+							<span class="button-sm">Yocto</span>
 							<span class="button-sm">AWS</span>
 							<span class="button-sm">Android Auto OS</span>
 							<span class="button-sm">Boost ASIO</span>
@@ -264,13 +269,13 @@
 							Gurgoan, India</a>
 						<blockquote>
 							<p>
-								Implemented a Bridge between Open Platform Communications United Architecture (OPC UA)
-								and Modbus data communication protocol using Open62541 SDK.
+								Successfully implemented a Bridge between OPC UA and Modbus data communication
+								protocol using Open62541 SDK, and libmodbus.
 							</p>
 
 							<p>
-								Developed network sockets and protocol for communication between Linux (Raspberry Pi) and 
-								FreeRTOS (TI Hercules TMS570 Micro-controller).
+								Developed custom data exchange protocol and network sockets for communication 
+								between Linux (Raspberry Pi) and FreeRTOS (TI Hercules TMS570 Micro-controller).
 							</p>
 
 						</blockquote>
@@ -298,6 +303,10 @@
 						<blockquote>
 							<p>
 								Worked as subject matter expert of C Language, Operating Systems, and Computer Networks. 
+							</p>
+							<p>
+								Collaborated with clients, and other SMEs to review content and to ensure that the
+								content meets its standards.
 							</p>
 
 						</blockquote>
